Iterate hiv-aids

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -65,8 +65,8 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-Groups that have played pivotal roles in shaping the response include local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
-The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constituting the "largest commitment by a single nation to address a single disease in history" indicates the scale of the response [@pepfar2022].
+Pivotal roles in shaping the response have been played by local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
+The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR, constituting the "largest commitment by a single nation to address a single disease in history" [@pepfar2022], is indicative of the scale of the response.
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -75,21 +75,20 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo].
-Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa.
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa.
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 ```
 
 <!-- The effort has translated into progress -->
-A substantial impact has been made on the course of the epidemic.
-The number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \@ref(fig:overall-picture)).
-This progress comes due to implementation HIV prevention and treatment options.
-I descibe the most significant of these below.
+Implementation of HIV prevention and treatment options have had a substantial impact on the course of the epidemic.
+As a result, the number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \@ref(fig:overall-picture)).
+I describe the most significant of these options below.
+
 
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
-A person living with HIV who takes ART daily can live a full and healthy life.
+A person living with HIV who takes ART daily can live a full and healthy life, transforming what was once a terminal illness to a treatable chronic condition.
 Of the `r custom_numbers_to_words(plhiv2022)` people living with HIV (PLHIV) in 2022, around `r coverage2022`% were accessing ART.
 A staggering `r custom_numbers_to_words(art_deaths_averted)` AIDS-related deaths are estimated to have been averted by ART [@unaids2023global].
 ART reduces the amount of virus in the blood and genital secretions.
@@ -104,12 +103,12 @@ Three landmark randomised control trials [@auvert2005randomized; @gray2007male; 
 Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings.
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are drugs which can be taken before and after exposure to prevent transmission.
-More costly than some other prevention options, they are primarily useful in high risk settings.
+PrEP and PEP are more costly than some other prevention options, so primarily useful in high risk settings.
 
-Though progress had been made, there remains much more to do.
+Though important progress had been made, there remains much more to do.
 In 2022 there were `r custom_numbers_to_words(infections2022)` people newly infected with HIV and `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
 Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
-Meeting these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding [@economist2023triple] requires renewed commitment.
+Renewed commitment is required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding [@economist2023triple]. 
 
 (ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
 
@@ -139,7 +138,7 @@ Examples include men who have sex with men (MSM), female sex workers (FSW), peop
 KPs are often marginalised, and face legal and social issues.
 In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
-For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing], but typically not considered a KP.
+For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing], but not typically considered a KP.
 
 <!-- Practical methods for prevention prioritisation: geographic, demographic, key population services, risk screening, individual-level risk characteristics. -->
 
@@ -159,7 +158,7 @@ The number of PLHIV is given by $N\rho$, where $N$ is the population size.
 HIV incidence can be specified in terms of HIV prevalence by $\lambda = N\Delta\rho$, where $\Delta\rho$ is the change in HIV prevalence over some time period.
 Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence.
 * **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART, typically written as a percentage.
-Estimates of ART coverage play a direct role in the provision and target setting for treatment services.
+Estimates of ART coverage play a direct role in provision of treatment services.
 
 <!-- Key data sources used to inform these indicators are: household surveys, programmatic data -->
 
@@ -180,15 +179,15 @@ All surveys are subject to sampling error, as only a subset of the target popula
 Each of these issues can be characterised as being due to missing data.
 I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
 3. **Survey biases**
-Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
+Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
 When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
 4. **Denominators and demography**
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
 Accurately estimating population denominators is itself a challenging task [@tatem2017worldpop].
 Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
 5. **Reliance on epidemiological parameters**
-Indicators rely on estimates of epidemiological parameters obtained from cohort studies.
-These parameters may not generalise to the setting of interest.
+Indicators rely on estimates of epidemiological parameters such as rates of disease progression.
+These parameters are typically obtained from cohort studies and may not generalise to the setting of interest.
 Further, they are typically applied coarsely, and without proper accounting for uncertainty.
 
 ### Statistical approaches
@@ -212,4 +211,4 @@ Ensuring the quality of any data used in the estimation process is essential.
 Aims for HIV response going forward, and the surveillance capabilities needed to meet them.
 
 1. **Greater reliance on routine health system data** It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. Patient-level HIV data systems [@world2017consolidated]. Case-based surveillance (CBS).
-2. **Integration with other health programs** Strengthen health systems.
+2. **Integration of HIV services with other health programs** Strengthen health systems.
